fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/Invoiced_Sales__c.object-meta.xml
<CustomObject>
    <description>Invoiced Sales is the official name that SAP sales that have are shipped and counted towards compensation.</description>
    <label>Invoiced Sales</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Invoiced Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoiced Sales</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>