fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoiced Sales</relationshipLabel>
    <relationshipName>Invoiced_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>