fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Account_Sales_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Key__c</fullName>
    <label>Account Sales Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>