fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/ASR__c.field-meta.xml
<CustomField>
    <fullName>ASR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ASR</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Invoiced Sales (ASR)</relationshipLabel>
    <relationshipName>Invoiced_Sales_ASR</relationshipName>
    <type>Lookup</type>
</CustomField>