fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/ASR_Name__c.field-meta.xml
<CustomField>
    <fullName>ASR_Name__c</fullName>
    <label>ASR Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>