fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Days</label>
    <referenceTo>Business_Days__c</referenceTo>
    <relationshipLabel>Invoiced Sales</relationshipLabel>
    <relationshipName>Invoiced_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>