fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Check_Product_Line_Length__c.field-meta.xml
<CustomField>
    <fullName>Check_Product_Line_Length__c</fullName>
    <formula>LEN( Product_Line__c ) = 18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Product Line Length</label>
    <type>Checkbox</type>
</CustomField>