fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <formula>Product__r.Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class</label>
    <type>Text</type>
</CustomField>