fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Compensation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compensation Rule</label>
    <referenceTo>Compensation_Rules__c</referenceTo>
    <relationshipLabel>Invoiced Sales</relationshipLabel>
    <relationshipName>Invoiced_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>