fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Compensation_Type_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type_Toggle__c</fullName>
    <formula>IF(UPPER(Compensation_Type__c) = &quot;ALL&quot;, NULL, Compensation_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensation Type Toggle</label>
    <type>Text</type>
</CustomField>