fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Compensatory__c.field-meta.xml
<CustomField>
    <fullName>Compensatory__c</fullName>
    <formula>AND(
/* TRUE if there is not a related Compensation Record */
NOT(ISBLANK(Compensation_Rules__c)),
/* TRUE if there is not an exception condition */
Exception__c = FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensatory</label>
    <type>Checkbox</type>
</CustomField>