fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Compensatory_YOY_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Compensatory_YOY_Toggle__c</fullName>
    <formula>if(NOT(ISBLANK(Compensation_Rules__c)),&quot;Compensatory Sales&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensatory YOY Toggle</label>
    <type>Text</type>
</CustomField>