fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Current_and_Last_Month_Fiscal_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_and_Last_Month_Fiscal_Sales__c</fullName>
    <formula>OR(
Business_Days__r.Date_Key__c =  Date__c,
Date__c = ADDMONTHS(Business_Days__r.Date_Key__c,-1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current and Last Month Fiscal Sales</label>
    <type>Checkbox</type>
</CustomField>