fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Current_Fiscal_Quarter_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Quarter_Sales__c</fullName>
    <formula>Current_Fiscal_Quarter_Number__c = Fiscal_Quarter_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Quarter Sales</label>
    <type>Checkbox</type>
</CustomField>