fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Current_Fiscal_Year_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Year_Sales__c</fullName>
    <formula>YEAR(Date__c) = YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Year Sales</label>
    <type>Checkbox</type>
</CustomField>