fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Current_Year_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Sales__c</fullName>
    <formula>IF(Current_Fiscal_Year_Sales__c=TRUE,Sales__c,0)</formula>
    <label>Current Year Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>