fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Customer_Group_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Bucket__c</fullName>
    <description>IF( AND( Compensation_Type__c  = &quot;EZIO&quot;, Compensation_Profile__c = &quot;EMISR&quot;), &quot;EZIO&quot;,
IF(
AND( OR(Account__r.Customer_Group__c = &quot;02&quot;, Account__r.Customer_Group__c = &quot;13&quot;), Compensation_Type__c  = &quot;EZIO&quot;), &quot;EM EZIO&quot;,
IF( Compensation_Type__c  = &quot;EZIO&quot;, &quot;HOSP EZIO&quot;, Compensation_Type__c
)
)
)</description>
    <formula>IF( AND( Compensation_Type__c  = &quot;EZIO&quot;, Compensation_Profile__c = &quot;EMISR&quot;), &quot;EZIO&quot;,
IF(
AND( OR(Account__r.Customer_Group__c = &quot;02&quot;, Account__r.Customer_Group__c = &quot;13&quot;), Compensation_Type__c  = &quot;EZIO&quot;), &quot;EM EZIO&quot;,
IF( Compensation_Type__c  = &quot;EZIO&quot;, &quot;HOSP EZIO&quot;, Compensation_Type__c
)
)
)</formula>
    <label>Customer Group Bucket</label>
    <type>Text</type>
</CustomField>