fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Date_2__c.field-meta.xml
<CustomField>
    <fullName>Date_2__c</fullName>
    <formula>Date__c</formula>
    <label>Date (2)</label>
    <type>Date</type>
</CustomField>