fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Commissionable Date</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>