fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Days_in_Past_6M__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Past_6M__c</fullName>
    <formula>Business_Days__r.Days_in_Past_6M__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Past 6M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>