fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Days_in_Previous_Fiscal_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Previous_Fiscal_Month__c</fullName>
    <formula>Business_Days__r.Days_in_Previous_Fiscal_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Previous Fiscal Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>