fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Days_In_Qt__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Qt__c</fullName>
    <formula>Business_Days__r.Days_In_Qtr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Qt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>