fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Days_Remaining_Qt__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining_Qt__c</fullName>
    <formula>Business_Days__r.Days_Left_Qtr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining Qt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>