fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Delta_CY_vs_PY__c.field-meta.xml
<CustomField>
    <fullName>Delta_CY_vs_PY__c</fullName>
    <formula>Current_Year_Sales__c-Last_Year_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta CY vs. PY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>