fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Difference_In_Sales__c.field-meta.xml
<CustomField>
    <fullName>Difference_In_Sales__c</fullName>
    <formula>Sales__c  -  Shared_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference In Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>