fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Director_Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Director_Territory_Number__c</fullName>
    <formula>Territory__r.Director_Territory_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Cockpit to join sales with the Director Quota if it exists</inlineHelpText>
    <label>Director Territory Number</label>
    <type>Text</type>
</CustomField>