fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/DNA__c.field-meta.xml
<CustomField>
    <fullName>DNA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DNA</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Invoiced Sales (DNA)</relationshipLabel>
    <relationshipName>Invoiced_Sales2</relationshipName>
    <type>Lookup</type>
</CustomField>