fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Final_Shared_Sales__c.field-meta.xml
<CustomField>
    <fullName>Final_Shared_Sales__c</fullName>
    <formula>Shared_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Shared Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>