fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Fiscal_Day_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Day_Multiplier__c</fullName>
    <formula>Business_Days__r.Fiscal_Day_Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Day Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>