fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Fiscal_Day_Total__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Day_Total__c</fullName>
    <inlineHelpText>Total Days in the Month</inlineHelpText>
    <label>Fiscal Day Total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>