fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Fiscal_Quarter_Number__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter_Number__c</fullName>
    <formula>/* Updated to support 2023 sales\Quota - AN July 13 2023*/
/* Updated to support 2023 sales\Quota - AN Feb 10 2023*/
/* Updated to support 2022 sales\Quota - AN Feb 17 2022*/

/* 2023 */
if(AND(Date__c &gt;= DATEVALUE(&quot;2023-01-01&quot;),Date__c &lt; DATEVALUE(&quot;2023-04-04&quot;)),1,
if(AND(Date__c &gt;= DATEVALUE(&quot;2023-04-04&quot;),Date__c &lt; DATEVALUE(&quot;2023-07-04&quot;)),2,
if(AND(Date__c &gt;= DATEVALUE(&quot;2023-07-04&quot;),Date__c &lt; DATEVALUE(&quot;2023-10-03&quot;)),3,
if(AND(Date__c &gt;= DATEVALUE(&quot;2023-10-03&quot;),Date__c &lt;= DATEVALUE(&quot;2023-12-31&quot;)),4,

/* 2022 */
if(AND(Date__c &gt;= DATEVALUE(&quot;2022-01-01&quot;),Date__c &lt; DATEVALUE(&quot;2022-03-29&quot;)),1,
if(AND(Date__c &gt;= DATEVALUE(&quot;2022-03-29&quot;),Date__c &lt; DATEVALUE(&quot;2022-06-28&quot;)),2,
if(AND(Date__c &gt;= DATEVALUE(&quot;2022-06-28&quot;),Date__c &lt; DATEVALUE(&quot;2022-09-27&quot;)),3,
if(AND(Date__c &gt;= DATEVALUE(&quot;2022-09-27&quot;),Date__c &lt;= DATEVALUE(&quot;2022-12-31&quot;)),4,
NULL
))))
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Quarter Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>