fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/GPO_Name__c.field-meta.xml
<CustomField>
    <fullName>GPO_Name__c</fullName>
    <description>With GPO Number: Contract_Header__r.Owner_Name__c &amp; &quot; (&quot; &amp;  Contract_Header__r.Owner__c &amp; &quot; )&quot;,</description>
    <formula>IF(
NOT(ISBLANK(Contract_Header__r.GPO_Contract_Ref__c)),
Contract_Header__r.Owner_Name__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPO Name</label>
    <type>Text</type>
</CustomField>