fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/IDN_Region__c.field-meta.xml
<CustomField>
    <fullName>IDN_Region__c</fullName>
    <formula>TEXT(Account__r.IDN__r.IDN_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDN Region</label>
    <type>Text</type>
</CustomField>