fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Item_Price_Paid__c.field-meta.xml
<CustomField>
    <fullName>Item_Price_Paid__c</fullName>
    <description>Formula Field created to show price paid by the customer for each item</description>
    <formula>(Sales__c / Quantity__c ) * Product__r.Qty_Sales_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Price Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>