fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/KAM__c.field-meta.xml
<CustomField>
    <fullName>KAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KAM</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Invoiced Sales (Territory Master)</relationshipLabel>
    <relationshipName>Invoiced_Sales1</relationshipName>
    <type>Lookup</type>
</CustomField>