fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/KAM_Name__c.field-meta.xml
<CustomField>
    <fullName>KAM_Name__c</fullName>
    <inlineHelpText>This is set in APEX</inlineHelpText>
    <label>KAM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>