fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Last_3_Months_Fiscal_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_3_Months_Fiscal_Sales__c</fullName>
    <formula>AND(
Business_Days__r.Date_Key__c !=  Date__c,
Date__c  &gt;= ADDMONTHS(Business_Days__r.Date_Key__c,-3)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 3 Months Fiscal Sales</label>
    <type>Checkbox</type>
</CustomField>