fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Last_Fiscal_Quarter_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Fiscal_Quarter_Sales__c</fullName>
    <formula>if(Current_Fiscal_Quarter_Number__c = 1, Fiscal_Quarter_Number__c = 4,
Current_Fiscal_Quarter_Number__c-1 = Fiscal_Quarter_Number__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Fiscal Quarter Sales</label>
    <type>Checkbox</type>
</CustomField>