fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Last_Year_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Sales__c</fullName>
    <description>Duplicate sales field for reporting</description>
    <formula>IF(Previous_Fiscal_Year_Sales__c=TRUE,Sales__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Sales</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>