fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Manager_Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Manager_Territory_Number__c</fullName>
    <formula>Territory__r.Manager_Territory_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Cockpit to join sales with the Manager Quota</inlineHelpText>
    <label>Manager Territory Number</label>
    <type>Text</type>
</CustomField>