fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName>
    <label>Material Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>