fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Max_Days_In__c.field-meta.xml
<CustomField>
    <fullName>Max_Days_In__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Days In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>