fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/New_Product_Tracking__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product Tracking</label>
    <referenceTo>New_Product_Tracking__c</referenceTo>
    <relationshipLabel>Invoiced Sales</relationshipLabel>
    <relationshipName>Invoiced_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>