fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/New_Product_Tracking_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Tracking_Name__c</fullName>
    <formula>New_Product_Tracking__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Product Tracking Name</label>
    <type>Text</type>
</CustomField>