fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoiced Sales (Parent Account)</relationshipLabel>
    <relationshipName>Invoiced_Sales1</relationshipName>
    <type>Lookup</type>
</CustomField>