fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Parent_Account_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Key__c</fullName>
    <inlineHelpText>Parent Account / Sold-To Account</inlineHelpText>
    <label>Parent Account Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>