fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Name__c</fullName>
    <formula>if(ISBLANK(Parent_SAP_Code__c),
NULL,
if(ISBLANK(Parent_Account__c),
&quot;Missing Account Name (&quot; &amp;  Parent_SAP_Code__c  &amp; &quot;)&quot;,
if(ISBLANK(Parent_Account__r.Distributor_Name__c),
Parent_Account__r.Name &amp; &quot; (&quot; &amp; Parent_Account__r.SAP_Sold_To__c &amp; &quot;)&quot;,
 Parent_Account__r.Distributor_Name__c 
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Name</label>
    <type>Text</type>
</CustomField>