fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <formula>Territory__r.Payee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee</label>
    <type>Text</type>
</CustomField>