fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Payee_Id__c.field-meta.xml
<CustomField>
    <fullName>Payee_Id__c</fullName>
    <formula>Territory__r.Payee_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Id</label>
    <type>Text</type>
</CustomField>