fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Previous_Fiscal_Year_Sales__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fiscal_Year_Sales__c</fullName>
    <formula>YEAR(Date__c) = YEAR(TODAY())-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Fiscal Year Sales</label>
    <type>Checkbox</type>
</CustomField>