fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Previous_YOY_Month__c.field-meta.xml
<CustomField>
    <fullName>Previous_YOY_Month__c</fullName>
    <formula>AND(
MONTH(Date__c) = MONTH(TODAY()),
YEAR(Date__c) = YEAR(TODAY())-1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous YOY Month</label>
    <type>Checkbox</type>
</CustomField>