fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <length>8</length>
    <type>Text</type>
</CustomField>