fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/PYOY_Total__c.field-meta.xml
<CustomField>
    <fullName>PYOY_Total__c</fullName>
    <formula>IF(
AND(
YEAR(TODAY())-1 = YEAR(Date__c),
MONTH(Date__c) &lt; MONTH(TODAY())), Sales__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PYOY Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>