fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Role_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Role_Toggle__c</fullName>
    <formula>Territory__r.Role_Toggle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Toggle</label>
    <type>Text</type>
</CustomField>