fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Sales_Build_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Build_Key__c</fullName>
    <formula>Product__r.Sales_Build_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Build Key</label>
    <type>Text</type>
</CustomField>